# Aya-chan

./: .gitignore  README.md  api_service.py  command.py  logger.py  main.py  pyproject.toml  website.py
src/: bot.py  commands.py  logger.py
src/apis/: database_api.py  erbs_api.py  gateway_api.py
src/cogs/: admin.py  basic.py  db_admin.py  erbs.py
src/resources/lookup/: characterMastery.json  consumables.json  hash.json  itemNames.json  masteryCodes.json  skillEvolutionPoints.json  skillgroups.json  skills.json
src/services/: database_service.py  erbs_service.py
templates/: admin.html  index.html
website/: server.py
