[tool.poetry]
name = "aya-chan"
version = "0.1.0"
description = "ERBS API Discord Bot"
authors = ["Gerard Vega <vega.gerard@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
command = "^0.1.0"
replit = "^2.0.0"
pytz = "^2020.4"
DiscordUtils = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"